# ml_projects

./: README.md
C++/: CMakeLists.txt
Paddy Leaf Classification/: paddy-doctor.ipynb
Retinal Optical Coherence Tomography/: retinal-oct-pytorch-99-8-resnet18.ipynb
mRNA Degradation/: mRNA_solution.ipynb
